[package]
name = "bevy_tiled_toolkit"
version = "0.1.0"
authors = ["Ghashy <obsidian.musicwork@gmail.com>"]
edition = "2021"
description = "Plugin for integration Tiled maps into Bevy game engine"

[dependencies]
bevy = { version = "0.11.0", default-features = false }
tiled = { version = "0.11.1", default_features = false }
bevy_rapier2d = { version = "0.22.0", optional = true }
anyhow = "1.0.72"

[features]
default = [
    "bevy/bevy_asset",
    "bevy/png",
    "bevy/bevy_sprite",
    "rapier2d"
]
rapier2d = [
    "bevy_rapier2d/simd-stable",
]
